# FLUX-sdk

./: .editorconfig  .gitignore  .prettierrc  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  vulnerability_disclosure.md
.github/workflows/: anchor-test.yml  audit-scan.yml  release.yml  rust.yml
app/: package.json
app/src/components/: Dashboard.tsx
app/src/components/Terminal/: index.tsx
app/src/components/Visualizer/: index.tsx
app/src/hooks/: useFlux.ts
app/src/utils/: format.ts
docs/: tokenomics.md
docs/architecture/: system_context.md
programs/flux-core/: Cargo.toml
programs/flux-core/src/: errors.rs  lib.rs
programs/flux-core/src/instructions/: admin.rs  fetch.rs  liquidate.rs  mod.rs  unload.rs  xfer.rs
programs/flux-core/src/state/: mod.rs  user_profile.rs  vault.rs
programs/flux-incinerator/: Cargo.toml
programs/flux-incinerator/src/: lib.rs
scripts/: deploy-mainnet.sh  generate-idls.sh  init-vault.ts  simulate-traffic.ts
sdk/: package.json  tsconfig.json
sdk/src/: index.ts
sdk/src/constants/: addresses.ts
sdk/src/core/: connection.ts  transaction-builder.ts
sdk/src/types/: index.ts
sdk/src/utils/: math.ts
tests/: flux-core.ts  liquidation-engine.spec.ts
tests/fuzz/: invariant-checks.rs
tests/utils/: mocks.ts
