[package]
name = "flux-incinerator"
version = "0.1.0"
description = "Token burning mechanism for FLUX Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flux_incinerator"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

